# pocketfox

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.toml  core_agent_lines.sh  crontab  docker-compose.yml  entrypoint.sh  pyproject.toml
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
nanobot/: __init__.py  __main__.py  logging.py
nanobot/agent/: __init__.py  context.py  loop.py  memory.py
nanobot/agent/tools/: __init__.py  base.py  cron.py  filesystem.py  message.py  registry.py  shell.py  voice.py  web.py
nanobot/bus/: events.py  queue.py
nanobot/channels/: __init__.py  base.py  feishu.py  manager.py  signal.py  telegram.py  whatsapp.py
nanobot/cli/: commands.py  repl.py  tty.py
nanobot/config/: loader.py  schema.py
nanobot/data/templates/: SECRETS.md
nanobot/heartbeat/: __init__.py
nanobot/providers/: __init__.py  litellm_provider.py
nanobot/session/: __init__.py  manager.py
nanobot/skills/cron/: SKILL.md
nanobot/skills/summarize/: SKILL.md
nanobot/skills/tmux/: SKILL.md
nanobot/skills/tmux/scripts/: find-sessions.sh
nanobot/skills/weather/: SKILL.md
nanobot/utils/: __init__.py  helpers.py  secrets.py
pocketfox/: log.py
pocketfox/agent/: __init__.py  context.py  entries.py  loop.py  memory.py  router.py  skills.py  subagent.py  task_context.py
pocketfox/agent/tools/: base.py  cron.py  filesystem.py  message.py  registry.py  shell.py  spawn.py  view_image.py  voice.py  web.py
pocketfox/bus/: __init__.py  events.py  queue.py
pocketfox/channels/: base.py  dingtalk.py  discord.py  feishu.py  manager.py  signal.py  telegram.py  whatsapp.py
pocketfox/cli/: __init__.py  commands.py  repl.py  tty.py
pocketfox/config/: __init__.py  loader.py  schema.py
pocketfox/cron/: __init__.py  service.py  types.py
pocketfox/providers/: __init__.py  base.py  litellm_provider.py  openai_compat_provider.py  openrouter_provider.py  registry.py  response_parser.py
pocketfox/session/: __init__.py  manager.py
pocketfox/skills/: README.md
pocketfox/skills/cron/: SKILL.md
pocketfox/skills/github/: SKILL.md
pocketfox/skills/tmux/: SKILL.md
pocketfox/skills/tmux/scripts/: find-sessions.sh
pocketfox/utils/: __init__.py  document.py  helpers.py  image.py
scripts/: test_mimo.py
tests/: test_agent_loop.py  test_build_messages_golden.py  test_config_loader.py  test_context_tool_results.py  test_docker.sh  test_document.py  test_helpers.py  test_image_entry.py  test_litellm_reasoning.py  test_loom_context.py  test_redact_params.py  test_router.py  test_secrets.py  test_session_config.py  test_session_manager.py  test_tool_validation.py  test_tool_whitelist.py  test_view_image_tool.py  test_voice_tool.py
tests/golden/: build_messages.json
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
workspace/memory/: MEMORY.md
