[project]
name = "pocketfox-ai"
version = "0.1.3.post5"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "pocketfox contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer==0.23.0",
    "litellm==1.83.1",
    "context-loom[media] @ {root:uri}/loom",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "httpx[socks]>=0.25.0",
    "loguru>=0.7.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "croniter>=2.0.0",
    "tzdata>=2024.1",
    "dingtalk-stream>=0.4.0",
    "python-telegram-bot[socks]>=22.7",
    "lark-oapi>=1.0.0",
    "socksio>=1.0.0",
    "tomli_w>=1.0.0",
    "elevenlabs>=2.41.0",
]

[project.optional-dependencies]
docs = [
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "striprtf>=0.0.26",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "striprtf>=0.0.26",
]

[project.scripts]
pocketfox = "pocketfox.cli.commands:app"

[tool.uv.sources]
context-loom = { path = "loom", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pocketfox"]

[tool.hatch.build.targets.wheel.sources]
"pocketfox" = "pocketfox"

# Include non-Python files in skills
[tool.hatch.build]
include = [
    "pocketfox/**/*.py",
    "pocketfox/skills/**/*.md",
    "pocketfox/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "pocketfox/",
    "bridge/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"bridge" = "pocketfox/bridge"

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
